# Elektra_oppstart_2025_proto

./: .gitignore  Arduino_ISP_tutorial.md  Arduino_biloversikt.xlsx  PCB.md  README.md
ATmega48/atmega48/: main.cpp
ATmega_C/ATmega_C/: ATmega_C.cproj  main.c
ATtiny85V/AT/: AT.atsln
ATtiny85_Stepper/: ATtiny85_Stepper.atsln
ATtiny85_Stepper/ATtiny85_Stepper/: ATtiny85_Stepper.c  ATtiny85_Stepper.componentinfo.xml  ATtiny85_Stepper.cproj
Arduino/test_r4_zumo/: .gitignore  README.md  platformio.ini  udp_reciever.py
Arduino/test_r4_zumoMQTT/: platformio.ini
Arduino/test_r4_zumoSensor/: platformio.ini
Bæret/: BærOgRoutrConfig.md
Del_2_sensora/: del2_sensora.slx  sensor_reading.slx
Del_2_sensora/TiltMaze/: RunTiltMaze.bat  requirements.txt  setup.bat
LiDAR_UART_plotiing/: LiDAR_UART_plot.py  LiDAR_UART_plot_read_and_write.py
LiDAR_UART_plotiing/LiDAR_UART_plot_CPP/: main.cpp  meson.build
LiDAR_UART_plotiing/LiDAR_UART_plot_CPP/subprojects/: sfml.wrap
MATLAB/MQTT_proto/: mqtt.m  mqtt_log.txt  mqtt_setup.asv  mqtt_setup.m  mqtt_simulink.slx  nul5  (+16 more)
MatLab/: ESP32_c6_UART.m  proto_ESP32_6C.slx
PLAN/: wtf.md
PrintFiles/: 28BYJ-48.3mf  28BYJ-48.stl  28BY_aksel.3mf
Programvare/: programvare_vips.md
mqtt-broker/: .gitignore  README.md  add_mqqt_user.bat  check_mqtt_status.bat  check_ports.bat  docker-compose.yml  generate_compose.bat  init_mqtt_passwd.bat  start_mqtt.bat  stop_mqtt.bat
pitch/: ide.md
score/: .gitignore  README.md  leaderboard.py  main.py  manuell_score.py  mqtt_score_listener.py  requirements.txt  run.bat  score_to_points.py  setup.bat
(+1103 files in other folders)
